@@ -1898,6 +1898,10 @@ std::string STAT_BackEnd::getFrameName(const Frame &frame, int depth)
         void *symtab = NULL;
 
         boolRet = frame.getLibOffset(modName, offset, symtab);
+#ifdef SW_VERSION_8_0_0
+        if (frame.isTopFrame() == false)
+            offset = offset - 1;
+#endif
         name = modName;
         snprintf(buf, BUFSIZE, "+0x%lx", offset);
         name += buf;
