@@ -1,3 +1,12 @@
+2014-05-15 Gregory L. Lee <lee218@llnl.gov>
+	* : add translate feature for module offset
+
+2014-05-14 Gregory L. Lee <lee218@llnl.gov>
+	* : enhanced node label decomposition in GUI
+
+2014-05-13 Gregory L. Lee <lee218@llnl.gov>
+	* : added module offset sample granularity
+
 2014-04-03 Gregory L. Lee <lee218@llnl.gov>
 	* : tag version 2.1.0
 
